lab8/mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-sql
  name: my-sql
spec:
  nodeSelector:
    kubernetes.io/hostname: minikube-m04 #wezel C
  containers:
  - image: mysql
    name: my-sql
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
